--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,15 @@
 /* * {
     border: 1px solid red;
 } */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;700&display=swap');
+
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+header * {
+    font-weight: bold;
+}
 
 .logo-header {
     margin: 0 0 0 2rem ;
@@ -10,5 +19,9 @@
 }
 
 .banner {
-    width: 100%;
+    /* width: 100%; */
+    height: 500px;
+    background-image: url("../img/futebol-raiz-varzea_956x500.jpg");
+    background-size: 100vw;
+    
 }
