--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white align-items-end"  >
+        <nav class="navbar navbar-expand-lg navbar-light bg-white align-items-end py-0 mh-50"  >
             <a class="navbar-brand logo-header position-relative" href="#">
         <!-- <nav class="navbar navbar-expand-lg navbar-light bg-white "  >
             <a class="navbar-brand logo-header " href="#"> -->
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#">CAMPEONATOS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LOJAS</a>
+                    <a class="nav-link" href="#">LOJA</a>
                 </li>
                 <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
@@ -46,12 +46,80 @@
     </header>
     <main class="container-fluid ">
         <div class="row">
-            <div class="col px-0">
-            <img class="banner" src="../img/banner.jpg" alt="">
+            <div class="col px-0 banner">
+            <!-- <img class="banner" src="../img/banner.jpg" alt=""> -->
+            <!-- <img class="banner" src="../img/futebol-raiz-varzea_956x500.jpg" alt=""> -->
             </div>
         </div>
-        
-        <div class="card-deck mt-5 mb-5 ">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner ">
+              <div class="carousel-item active  ">
+                <div class="card-deck my-5">
+                    <div class="card">
+                      <img class="card-img-top" src="../img/card1.PNG" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img class="card-img-top" src="../img/card2.PNG" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img class="card-img-top" src="../img/card3.PNG" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card-deck my-5 ">
+                    <div class="card">
+                      <img class="card-img-top" src="../img/card1.PNG" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img class="card-img-top" src="../img/card2.PNG" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                    <div class="card">
+                      <img class="card-img-top" src="../img/card3.PNG" alt="Card image cap">
+                      <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+        </div>
+        <!-- <div class="card-deck mt-5 mb-5 ">
             <div class="card">
               <img class="card-img-top" src="../img/card1.PNG" alt="Card image cap">
               <div class="card-body">
@@ -76,7 +144,7 @@
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="row justify-content-md-center">
             <div class="col-9 embed-responsive embed-responsive-16by9">
@@ -89,5 +157,8 @@
             <p>© 2020 PeNoChão - O seu Portal dos jogos de varzea. Todos os direitos reservados.</p>
         </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
