--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,59 @@ header * {
     background-size: 100vw;
     
 }
+
+.col-perfil {
+    border: 2px solid lightgrey;
+    border-radius: 30px;
+    /* padding: 0!important; */
+    height: 800px;
+}
+
+.col-feed {
+    /* border: 2px solid lightgrey; */
+    border-radius: 30px;
+    padding: 0!important;
+    height: 600px;
+    background-color: rgb(197, 226, 236);
+}
+
+.col-geral {
+    border: 2px solid lightgrey;
+    border-radius: 30px;
+    padding: 0!important;
+    height: 600px;
+}
+
+.background-perfil {
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    background-image: url('../img/gramado-bkg.PNG');
+    background-position: center;
+    background-size: 300px;
+    background-repeat: no-repeat;
+    width: 300px;
+    height: 150px;
+    padding: 0;
+    margin: 0;
+}
+
+.foto-perfil {
+    border: 2px solid lightgrey;
+    border-radius: 50%;
+    top: 60px;
+    left: 70px;
+    background-color: white;
+    width: 150px;
+    height: 150px;
+    z-index: 1;
+    background-image: url('../img/perfil.PNG');
+    background-repeat: no-repeat;
+    background-position: center;
+
+}
+
+.resenha {
+    border: 1px solid black;
+    border-radius: 50px;
+    width: 50px;
+}
