--- a/views/home.html
+++ b/views/home.html
@@ -9,147 +9,69 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-white align-items-end py-0 mh-50"  >
-            <a class="navbar-brand logo-header position-relative" href="#">
-        <!-- <nav class="navbar navbar-expand-lg navbar-light bg-white "  >
-            <a class="navbar-brand logo-header " href="#"> -->
-        
-        
-                <img class="" src="../img/logo_200x200.png" width="100" height="100" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse  justify-content-end mr-5" id="navbarNav">
-            <ul class="navbar-nav">
-                <!-- <li class="nav-item active">
-                    <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
-                </li> -->
-                <li class="nav-item">
-                    <a class="nav-link" href="#">TIMES</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">JOGOS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">CAMPEONATOS</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">LOJA</a>
-                </li>
-                <!-- <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li> -->
-            </ul>
-            </div>
-        </nav>
-    </header>
-    <main class="container-fluid ">
-        <div class="row">
-            <div class="col px-0 banner">
-            <!-- <img class="banner" src="../img/banner.jpg" alt=""> -->
-            <!-- <img class="banner" src="../img/futebol-raiz-varzea_956x500.jpg" alt=""> -->
-            </div>
-        </div>
-        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner ">
-              <div class="carousel-item active  ">
-                <div class="card-deck my-5">
-                    <div class="card">
-                      <img class="card-img-top" src="../img/card1.PNG" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <img class="card-img-top" src="../img/card2.PNG" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <img class="card-img-top" src="../img/card3.PNG" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                  </div>
-              </div>
-              <div class="carousel-item">
-                <div class="card-deck my-5 ">
-                    <div class="card">
-                      <img class="card-img-top" src="../img/card1.PNG" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <img class="card-img-top" src="../img/card2.PNG" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                    <div class="card">
-                      <img class="card-img-top" src="../img/card3.PNG" alt="Card image cap">
-                      <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                      </div>
-                    </div>
-                  </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-        </div>
-        <!-- <div class="card-deck mt-5 mb-5 ">
-            <div class="card">
-              <img class="card-img-top" src="../img/card1.PNG" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="../img/card2.PNG" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-            <div class="card">
-              <img class="card-img-top" src="../img/card3.PNG" alt="Card image cap">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div> -->
+      <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #2b83c2;">
+        <div class="container-fluid">
+          <!-- <div class="row"> -->
+            <div class="col-1">
 
-          <div class="row justify-content-md-center">
-            <div class="col-9 embed-responsive embed-responsive-16by9">
-                <iframe width="75%" height="75%" src="https://www.youtube.com/embed/-hY1Niap0Uw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
+            <div class="col-1">
+              <!-- <a class="navbar-brand   col-sm-12" href="#"> -->
+                <img src="../img/logo_200x200.png" width="75" height="75" alt="">
+              <!-- </a> -->
+            </div>
+            <div class="col-1"></div>
+            <div class="col-6">
+              <form class="form-inline justify-content-center">
+                <input class="form-control col-sm-12 mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+              </form>
+            </div>
+            <div class="col-1">
+              <a class="navbar-brand" href="#">
+                <!-- <img src="../img/flag.PNG"  alt=""> -->
+              </a>
+            </div>
+            <div class="col-1">
+              <a class="navbar-brand" href="#">
+                <img src="../img/flag.PNG"  alt="">
+              </a>
+            </div>
+            <div class="col-1">
+              <a class="navbar-brand" href="#">
+                <img src="../img/apito.PNG" alt="">
+              </a>
+            </div>
+        <!-- </div> -->
+      </nav>
+      
+    </header>
+    <main class="container-fluid">
+        <div class="row mt-5 mx-4">
+          <div class="col mx-2 px-0 col-perfil position-relative">
+            <div class="d-flex background-perfil">
+              <!-- <img src="../img/gramado-bkg.PNG" width="250px" alt=""> -->
+            </div>
+            <div class="foto-perfil position-absolute">
+              <!-- <img src="../img/perfil.PNG" alt=""> -->
+            </div>
+            <div class="mt-3 h-75 d-flex justify-content-md-center align-items-center">
+              <img src="../img/dados-perfil.PNG">
+            </div>
+          </div>
+          <div class="col-6 mx-2 col-feed">
+            <div class="container ">
+              <div class="row">
+                  <div class="col mx-2 mt-5 resenha">Hora da resenha</div>
+              </div>
+              <div class="row">
+                <div class="col mt-5" style="border: 1px solid black">Feed</div>
+              </div>
+            </div>
+          </div>
+          <div class="col mx-2 col-geral d-flex justify-content-center">
+            3 of 3
+          </div>
         </div>
     </main>
     <footer>
