--- a/views/home.html
+++ b/views/home.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Document</title>
+    <title>PéNoChão</title>
 </head>
 <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #2b83c2;">
-        <div class="container-fluid">
+        <div class="container px-0">
           <!-- <div class="row"> -->
-            <div class="col-1">
-
+            <div class="col-1 px-0">
+              <img src="../img/logo_200x200.png" width="75" height="75" alt="">
             </div>
             <div class="col-1">
               <!-- <a class="navbar-brand   col-sm-12" href="#"> -->
-                <img src="../img/logo_200x200.png" width="75" height="75" alt="">
+                
               <!-- </a> -->
             </div>
             <div class="col-1"></div>
             <div class="col-6">
               <form class="form-inline justify-content-center">
-                <input class="form-control col-sm-12 mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control col-sm-12 mr-sm-2" type="search" placeholder="" aria-label="Search">
               <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
               </form>
             </div>
@@ -46,30 +46,41 @@
       </nav>
       
     </header>
-    <main class="container-fluid">
-        <div class="row mt-5 mx-4">
-          <div class="col mx-2 px-0 col-perfil position-relative">
+    <main class="container">
+        <div class="row mt-5 mx">
+          <div class="col px-0 col-perfil position-relative">
             <div class="d-flex background-perfil">
               <!-- <img src="../img/gramado-bkg.PNG" width="250px" alt=""> -->
             </div>
-            <div class="foto-perfil position-absolute">
+            <div class="foto-perfil rounded-circle position-absolute">
               <!-- <img src="../img/perfil.PNG" alt=""> -->
             </div>
             <div class="mt-3 h-75 d-flex justify-content-md-center align-items-center">
               <img src="../img/dados-perfil.PNG">
             </div>
           </div>
-          <div class="col-6 mx-2 col-feed">
-            <div class="container ">
-              <div class="row">
-                  <div class="col mx-2 mt-5 resenha">Hora da resenha</div>
+          <div class="col-6 mx-3 col-feed">
+            <div class="container">
+              <div class="row mt-2 mx-1 resenha bg-white ">
+                  <div class="col-sm-10 py-3 ">
+                    <h5>Hora da resenha</h5>
+                    <p class="text-center">Escreva a descrição da sua ...</p>
+                  </div> 
+                  <div class="col-sm-2 py-3 px-0 d-flex justify-content-center align-items-center">
+                    <div>
+                      <img src="../img/cam.PNG">
+                    </div>
+                  </div>
               </div>
-              <div class="row">
-                <div class="col mt-5" style="border: 1px solid black">Feed</div>
-              </div>
+              
+              <div class="row mt-2 mx-1 resenha bg-white">
+                <div class="col-sm-11">
+                  <p class="text-center">Post</p>
+                </div> 
+            </div>
             </div>
           </div>
-          <div class="col mx-2 col-geral d-flex justify-content-center">
+          <div class="col col-geral d-flex justify-content-center">
             3 of 3
           </div>
         </div>
