--- a/views/home.html
+++ b/views/home.html
@@ -9,60 +9,92 @@
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #2b83c2;">
+      <nav class="navbar navbar-dark nav-desktop-penochao">
         <div class="container px-0">
-          <!-- <div class="row"> -->
-            <div class="col-1 px-0">
-              <img src="../img/logo_200x200.png" width="75" height="75" alt="">
+            <div class="col-3 px-0">
+               <a class="navbar-brand mx-0 py-0" href="#">
+                <img src="../img/logo_75x75.png"  alt="">
+              </a>
             </div>
-            <div class="col-1">
-              <!-- <a class="navbar-brand   col-sm-12" href="#"> -->
-                
-              <!-- </a> -->
-            </div>
-            <div class="col-1"></div>
-            <div class="col-6">
+            <div class="col-6 px-0">
               <form class="form-inline justify-content-center">
-                <input class="form-control col-sm-12 mr-sm-2" type="search" placeholder="" aria-label="Search">
-              <!-- <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button> -->
+                <input class="form-control border-info rounded-pill col-sm-12 " type="search" placeholder="" aria-label="Search">
               </form>
             </div>
-            <div class="col-1">
-              <a class="navbar-brand" href="#">
-                <!-- <img src="../img/flag.PNG"  alt=""> -->
-              </a>
-            </div>
-            <div class="col-1">
-              <a class="navbar-brand" href="#">
-                <img src="../img/flag.PNG"  alt="">
-              </a>
-            </div>
-            <div class="col-1">
-              <a class="navbar-brand" href="#">
-                <img src="../img/apito.PNG" alt="">
-              </a>
-            </div>
-        <!-- </div> -->
-      </nav>
-      
+            <div class="col px-0 d-flex justify-content-center">
+              <a class="navbar-brand mx-0 py-0" href="#">
+               <img src="../img/bola_75x75.png"  alt="">
+             </a>
+           </div>
+           <div class="col px-0 d-flex justify-content-center">
+            <a class="navbar-brand mx-0 py-0" href="#">
+             <img src="../img/flag_75x75.PNG"  alt="">
+           </a>
+           </div>
+           <div class="col px-0 d-flex justify-content-center">
+          <a class="navbar-brand mx-0 py-0" href="#">
+           <img src="../img/apito_75x75.PNG"  alt="">
+         </a>
+           </div>
+        </div>
+      </nav>  
     </header>
+
     <main class="container">
-        <div class="row mt-5 mx">
-          <div class="col px-0 col-perfil position-relative">
-            <div class="d-flex background-perfil">
-              <!-- <img src="../img/gramado-bkg.PNG" width="250px" alt=""> -->
+        <div class="row mt-3">
+
+          <!-- Início da coluna do Perfil -->
+          <div class="col-3 px-0 ">
+            <div class="row mx-0 d-flex justify-content-center">
+              <div>
+                <img class="rounded-top-penochao" src="../img/gramado-bkg.PNG" width="285px">
+              </div>
+              <div class="foto-perfil position-absolute">
+              </div>
             </div>
-            <div class="foto-perfil rounded-circle position-absolute">
-              <!-- <img src="../img/perfil.PNG" alt=""> -->
-            </div>
-            <div class="mt-3 h-75 d-flex justify-content-md-center align-items-center">
-              <img src="../img/dados-perfil.PNG">
+            <div class="container border rounded-bottom-penochao ">
+              <div class="row d-flex justify-content-center">
+                <div class="mt-5 pt-3">
+                  <h5 class="text-center">Caio Roberto da Silva</h5>
+                  <p class="text-center">Zagueiro</p>
+                  <h5 class="text-center">Estatísticas</h5>
+                </div>
+              </div>
+              <div class="row d-flex justify-content-center">
+                <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                  <h1 class="text-center">10</h1>
+                  <p class="text-center">PARTIDAS</p> 
+                </div>
+                <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                  <h1 class="text-center">0</h1>
+                  <p class="text-center">GOLS</p> 
+                </div>
+              </div>
+              <div class="row d-flex justify-content-center">
+                <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                  <h1 class="text-center">0</h1>
+                  <p class="text-center">ASSISTÊNCIAS</p> 
+                </div>
+                <div class="col mx-2 px-2 my-1 py-3 border rounded-penochao">
+                  <h1 class="text-center">8</h1>
+                  <p class="text-center">VITÓRIAS</p> 
+                </div>
+              </div>
+              <div class="row d-flex mb-3 justify-content-center">
+                <div class="col mx-2 my-1 py-3 border rounded-penochao">
+                  <h1 class="text-center">80%</h1>
+                  <p class="text-center">APROVEITAMENTO</p> 
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-6 mx-3 col-feed">
-            <div class="container">
-              <div class="row mt-2 mx-1 resenha bg-white ">
-                  <div class="col-sm-10 py-3 ">
+          <!-- Fim da coluna do Perfil -->
+
+          <!-- Início da coluna do feed -->
+          <div class="col-6">
+            <div class="container border rounded-penochao">
+              <div class="row mx-2">
+                  <div class="col-sm-10 my-2 resenha py-3 bg-white">
                     <h5>Hora da resenha</h5>
                     <p class="text-center">Escreva a descrição da sua ...</p>
                   </div> 
@@ -80,16 +112,25 @@
             </div>
             </div>
           </div>
-          <div class="col col-geral d-flex justify-content-center">
+          <!-- Fim da coluna do feed -->
+
+          <!-- Início da coluna 3 -->
+          <div class="col border rounded-penochao d-flex justify-content-center">
             3 of 3
           </div>
+          <!-- Fim da coluna 3 -->
         </div>
     </main>
+
+
     <footer>
         <div class="row justify-content-md-center mt-5">
             <p>© 2020 PeNoChão - O seu Portal dos jogos de varzea. Todos os direitos reservados.</p>
         </div>
     </footer>
+
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
