--- a/views/home.html
+++ b/views/home.html
@@ -92,21 +92,21 @@
 
           <!-- Início da coluna do feed -->
           <div class="col-6">
-            <div class="container border rounded-penochao">
-              <div class="row mx-2">
-                  <div class="col-sm-10 my-2 resenha py-3 bg-white">
+            <div class="container bg-feed border rounded-penochao">
+              <div class="row mx-0 my-3 rounded-penochao">
+                  <div class="col-10 my-2 py-3 bg-white rounded-left-penochao">
                     <h5>Hora da resenha</h5>
-                    <p class="text-center">Escreva a descrição da sua ...</p>
+                    <p class="">Escreva a descrição da sua imagem</p>
                   </div> 
-                  <div class="col-sm-2 py-3 px-0 d-flex justify-content-center align-items-center">
+                  <div class="col-2 my-2 bg-btn-camera rounded-right-penochao d-flex justify-content-center align-items-center">
                     <div>
                       <img src="../img/cam.PNG">
                     </div>
                   </div>
               </div>
-              
-              <div class="row mt-2 mx-1 resenha bg-white">
-                <div class="col-sm-11">
+         
+              <div class="row mx-2 my-2 bg-white rounded-penochao">
+                <div class="col-12">
                   <p class="text-center">Post</p>
                 </div> 
             </div>
