--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/style2.css">
     <title>PéNoChão</title>
 </head>
 <body>
@@ -115,8 +116,146 @@
           <!-- Fim da coluna do feed -->
 
           <!-- Início da coluna 3 -->
-          <div class="col border rounded-penochao d-flex justify-content-center">
-            3 of 3
+          <div class="col-3 border rounded-penochao justify-content-center">
+            <div class="row mt-2 justify-content-center">
+              <h5 class="text-center">Resultado de</h5>
+            </div>
+
+            <!--Div que mostra a localização-->
+            <div class="row justify-content-center">
+              <div class="locaPlacar">
+                <img src="../img/PinLocation.png" width="7%" height="50%">&nbsp $VariavelCidade/Regiao
+              </div>
+            </div>
+        
+
+            <!--Div do placar-->
+            <div class="container-fluide border mt-3 ">
+              <div class="mt-2">
+                <h5 class="text-center">Últimos Placares</h5>
+              </div>
+              <!--Divi dos escudos-->
+              <div class="row mt-3">
+                <div class="col d-flex justify-content-center">
+                  <img src="../img/escudo-figueirense.png" width="60%" height="90%">
+                </div>
+
+                <div class="col  d-flex justify-content-center">
+                  <img src="../img/escudo-paysandu.png" width="60%" height="90%">
+                </div>
+              </div>
+
+              <!--Divi dos numeros dos placares-->
+              <div class="row mt-2">
+                <div class="col d-flex justify-content-center">
+                  0
+                </div>
+                <div class="col d-flex justify-content-center">
+                  2
+                </div>
+              </div>
+            </div>
+
+
+            <!--Div do grado dos jogadores destaque-->
+            <div class="container-fluide border mt-3 ">
+              <div class="mt-2">
+                <h5 class="text-center">Artilheiros</h5>
+              </div>
+              <!--Divi das fotos dos artilheiros-->
+              <div class="row mt-3">
+                <div class="col d-flex justify-content-center">
+                  <img src="../img/users/00000000001.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+
+                <div class="col  d-flex justify-content-center">
+                  <img src="../img/users/00000000002.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+
+                <div class="col  d-flex justify-content-center">
+                  <img src="../img/users/00000000003.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+              </div>
+
+              <!--Divi dos nomes dos artilheiros-->
+              <div class="row">
+                <div class="col d-flex justify-content-center">
+                  Marta
+                </div>
+                <div class="col d-flex justify-content-center">
+                  Lucia
+                </div>
+                <div class="col d-flex justify-content-center">
+                  Ronaldinho
+                </div>
+              </div>
+
+              <!--Divi das fotos das assitências-->
+              <div class="mt-5">
+                <h5 class="text-center">Assitências</h5>
+              </div>
+
+              <div class="row mt-3">
+                <div class="col d-flex justify-content-center">
+                  <img src="../img/users/00000000004.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+
+                <div class="col  d-flex justify-content-center">
+                  <img src="../img/users/00000000005.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+
+                <div class="col  d-flex justify-content-center">
+                  <img src="../img/users/00000000006.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+              </div>
+
+              <!--Divi dos nomes das assitências-->
+              <div class="row">
+                <div class="col d-flex justify-content-center">
+                  Falcão
+                </div>
+                <div class="col d-flex justify-content-center">
+                  Daniel
+                </div>
+                <div class="col d-flex justify-content-center">
+                  Ganço
+                </div>
+              </div>
+
+              <!--Divi das fotos das ZAgas menos vazadas-->
+              <div class="mt-5">
+                <h5 class="text-center">Melhores Zagas</h5>
+              </div>
+
+              <div class="row mt-3">
+                <div class="col d-flex justify-content-center">
+                  <img src="../img/users/00000000007.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+
+                <div class="col  d-flex justify-content-center">
+                  <img src="../img/users/00000000008.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+
+                <div class="col  d-flex justify-content-center">
+                  <img src="../img/users/00000000009.jpeg" width="60%" height="100%" class="rounded-circle">
+                </div>
+              </div>
+
+              <!--Divi dos nomes das assitências-->
+              <div class="row">
+                <div class="col d-flex justify-content-center">
+                  Sergio
+                </div>
+                <div class="col d-flex justify-content-center">
+                  Thiago
+                </div>
+                <div class="col d-flex justify-content-center">
+                  Diego
+                </div>
+              </div>
+            </div>
+        
+
           </div>
           <!-- Fim da coluna 3 -->
         </div>
