Update - Container Esquerdo

--- a/views/home.html
+++ b/views/home.html
@@ -54,10 +54,12 @@
             </div>
             <div class="container border rounded-bottom-penochao ">
               <div class="row d-flex justify-content-center">
-                <div class="mt-5 pt-3">
-                  <h5 class="text-center">Caio Roberto da Silva</h5>
-                  <p class="text-center">Zagueiro</p>
-                  <h5 class="text-center">Estatísticas</h5>
+                <div class="col">
+                  <div class="mt-5 pt-3">
+                    <h5 class="text-center">Caio Roberto da Silva</h5>
+                    <p class="text-center">Zagueiro</p>
+                    <h5 class="text-center">Estatísticas</h5>
+                  </div>
                 </div>
               </div>
               <div class="row d-flex justify-content-center">
@@ -128,7 +130,6 @@
             <p>© 2020 PeNoChão - O seu Portal dos jogos de varzea. Todos os direitos reservados.</p>
         </div>
     </footer>
-
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
