D- coluna do feed parte inferior

--- a/views/jogos.html
+++ b/views/jogos.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+      <!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.16.0/css/mdb.min.css" rel="stylesheet">
+
+     
+     
     <title>Document</title>
 </head>
 <body>
@@ -102,14 +113,7 @@
         </div>
     </div>  
         
-        
-        
-
-            
- 
-
-
-                
+     
 
 </main>
 
@@ -118,11 +122,126 @@
 
 
 
-    <footer>
-        <div class="row justify-content-md-center mt-5 " >
-            <p>© 2020 PeNoChão - O seu Portal dos jogos de varzea. Todos os direitos reservados.</p>
+   
+<!-- Footer -->
+<footer class="page-footer font-small mdb-color lighten-3 pt-4">
+
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
+  
+      <!-- Grid row -->
+      <div class="row">
+  
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mr-auto my-md-4 my-0 mt-4 mb-1">
+  
+          <!-- Content -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Footer Content</h5>
+          <p>PeNoChão</p>
+          <p>Um site onde suas conquistas são notadas,
+            o jogo no campão que invade o mundo, divulgado ,
+            postando e comentando, nossa plataforma foi criada para unir
+            pessoas distantes mais com mesmo objetivo, divulgar o que ninguém, consegue ver,
+            seguir os jogadores anônimos, que jogam em nível profissional   </p>
+  
         </div>
-    </footer>
+        <!-- Grid column -->
+  
+        <hr class="clearfix w-100 d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 mx-auto my-md-4 my-0 mt-4 mb-1">
+  
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Paginas</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <p>
+                <a href="#!">Times</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="#!">jogos</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="#!">loja</a>
+              </p>
+            </li>
+            <li>
+              <p>
+                <a href="#!">Campeonatos</a>
+              </p>
+            </li>
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <hr class="clearfix w-100 d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 mx-auto my-md-4 my-0 mt-4 mb-1">
+  
+          <!-- Contact details -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Endereço</h5>
+  
+          <ul class="list-unstyled">
+            <li>
+              <p>
+                <i class="fas fa-home mr-3"></i> Av. Dr. Cardoso de Melo, 90   <br> Vila Olímpia, São Paulo - SP, 04548-000</p>
+            </li>
+            <li>
+              <p>
+                <i class="fas fa-envelope mr-3"></i> penochao@gmail.com</p>
+            </li>
+            <li>
+              <p>
+                <i class="fas fa-phone mr-3"></i> (11) 3500-9839</p>
+            </li>
+            
+          </ul>
+  
+        </div>
+        <!-- Grid column -->
+  
+        <hr class="clearfix w-100 d-md-none">
+  
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
+  
+          <!-- Social buttons -->
+          <h5 class="font-weight-bold text-uppercase mb-4">Follow</h5>
+  
+          <!-- Facebook -->
+          <a type="button" class="btn-floating btn-fb">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        
+          <!-- Google +-->
+          <a type="button" class="btn-floating btn-gplus">
+            <i class="fab fa-google-plus-g"></i>
+          </a>
+          
+  
+        </div>
+      </div>
+    </div>
+      <div class="footer-copyright text-center py-3">
+        <p>© 2020 PeNoChão - O seu Portal dos jogos de varzea. Todos os direitos reservados.</p>
+
+      </div>
+
+    </div>
+    
+  
+  </footer>
+  <!-- Footer -->
+  
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
