--- a/views/home.html
+++ b/views/home.html
@@ -25,12 +25,12 @@
   <header>
     <nav class="navbar navbar-dark nav-desktop-penochao">
       <div class="container px-0">
-        <div class="col-3 px-0">
+        <div class="col-sm-3 px-0">
           <a class="navbar-brand mx-0 py-0" href="#">
             <img src="../img/logo_75x75.png" alt="">
           </a>
         </div>
-        <div class="col-6 px-0">
+        <div class="col-sm-6 px-0">
           <form class="form-inline justify-content-center">
             <input class="form-control border-info rounded-pill col-sm-12 " type="search" placeholder=""
               aria-label="Search">
@@ -59,22 +59,28 @@
     <div class="row mt-3">
 
       <!-- Início da coluna do Perfil -->
-      <div class="col-3 px-0 ">
-        <div class="row mx-0 d-flex justify-content-center">
-          <div>
-            <img class="rounded-top-penochao" src="../img/gramado-bkg.PNG" width="285px">
-          </div>
-          <!-- <div class="position-absolute"> -->
-            <div class="foto-perfil" style="background-image: url('../img/foto-perfil.jpg');">
-            
-          </div>
+      <div class="col-sm-3 border rounded-penochao ">
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <!-- Banner Profile-->
+                <div>
+                    <img class="rounded-top-penochao bg-profile" src="../img/gramado-bkg.PNG">
+                </div>
+              </div>
         </div>
-        <div class="container border rounded-bottom-penochao container-perfil">
-          <div class="row d-flex justify-content-center">
-            <div class="mt-5 pt-3">
-              <h5 class="text-center">Caio Roberto da Silva</h5>
-              <p class="text-center">Zagueiro</p>
-              <h5 class="text-center">Estatísticas</h5>
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <!-- Foto profile -->
+                <div class="foto-perfil" style="background-image: url('../img/foto-perfil.jpg');">
+                </div>
+            </div>
+        </div>
+        <div class="container">
+          <div class="row ">
+            <div class="col">
+                <h5 class="text-center">Caio Roberto da Silva</h5>
+                <p class="text-center">Zagueiro</p>
+                <h5 class="text-center">Estatísticas</h5>
             </div>
           </div>
           <div class="row d-flex justify-content-center">
@@ -108,15 +114,15 @@
       <!-- Fim da coluna do Perfil -->
 
       <!-- Início da coluna do feed -->
-      <div class="col-6">
+      <div class="col-sm-6">
         <div class="container bg-feed border rounded-penochao">
           <div class="row mx-0 my-3 rounded-penochao">
-            <div class="col-10 my-2 py-3 bg-white rounded-left-penochao">
+            <div class="col-sm-10 my-2 py-3 bg-white rounded-left-penochao">
               <h5>Hora da resenha</h5>
               <p class="">Escreva a descrição da sua imagem</p>
             </div>
             <div
-              class="col-2 my-2 bg-btn-camera rounded-right-penochao d-flex justify-content-center align-items-center">
+              class="col-sm-2 my-2 bg-btn-camera rounded-right-penochao d-flex justify-content-center align-items-center">
               <div>
                 <img src="../img/cam.PNG">
               </div>
@@ -124,7 +130,7 @@
           </div>
 
           <div class="row mx-2 my-2 bg-white rounded-penochao">
-            <div class="col-12">
+            <div class="col-sm-12">
               <p class="text-center">Post</p>
             </div>
           </div>
@@ -138,7 +144,7 @@
                 <img src="/img/foto-perfil.jpg" class="rounded-circle" width="20px" height="20px" alt="Foto perfil"></a>
             </div>
 
-            <div class=" d-flex-column align-items-center col-6">
+            <div class=" d-flex-column align-items-center col-sm-6">
               <a href="">
                 <h6 class="text-1 my-1">Caio da silva</h6>
               </a>
@@ -202,7 +208,7 @@
 
 
       <!-- Início da coluna 3 -->
-      <div class="col-3 border rounded-penochao justify-content-center">
+      <div class="col-sm-3 border rounded-penochao justify-content-center">
         <div class="row mt-2 justify-content-center">
           <h5 class="text-center">Resultado de</h5>
         </div>
