--- a/views/home.html
+++ b/views/home.html
@@ -25,7 +25,7 @@
   <header>
     <nav class="navbar navbar-dark nav-desktop-penochao">
       <div class="container px-0">
-        <div class="col-sm-3 px-0">
+        <div class="col-sm-3 px-0 logo-mobile">
           <a class="navbar-brand mx-0 py-0" href="#">
             <img src="../img/logo_75x75.png" alt="">
           </a>
@@ -59,7 +59,7 @@
     <div class="row mt-3">
 
       <!-- Início da coluna do Perfil -->
-      <div class="col-sm-3 border rounded-penochao ">
+      <div class="col-sm-3 border-penochao border-penochao-mobile rounded-penochao">
         <div class="row">
             <div class="col d-flex justify-content-center">
                 <!-- Banner Profile-->
@@ -114,15 +114,15 @@
       <!-- Fim da coluna do Perfil -->
 
       <!-- Início da coluna do feed -->
-      <div class="col-sm-6">
-        <div class="container bg-feed border rounded-penochao">
+      <div class="col-sm-6 col-feed">
+        <div class="container bg-feed border border-penochao-mobile rounded-top-penochao rounded-bottom-penochao">
           <div class="row mx-0 my-3 rounded-penochao">
-            <div class="col-sm-10 my-2 py-3 bg-white rounded-left-penochao">
+            <div class="col-10 my-2 py-3 bg-white rounded-left-penochao">
               <h5>Hora da resenha</h5>
               <p class="">Escreva a descrição da sua imagem</p>
             </div>
             <div
-              class="col-sm-2 my-2 bg-btn-camera rounded-right-penochao d-flex justify-content-center align-items-center">
+              class="col-2 my-2 bg-btn-camera rounded-right-penochao d-flex justify-content-center align-items-center">
               <div>
                 <img src="../img/cam.PNG">
               </div>
@@ -208,7 +208,7 @@
 
         
       <!-- Início da coluna 3 -->
-      <div class="col-sm-3 border rounded-penochao justify-content-center">
+      <div class="col-sm-3 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao justify-content-center">
         <div class="row mt-2 justify-content-center">
           <h5 class="text-center">Resultado de</h5>
         </div>
