--- a/views/home.html
+++ b/views/home.html
@@ -32,7 +32,7 @@
         </div>
         <div class="col-sm-6 px-0">
           <form class="form-inline justify-content-center">
-            <input class="form-control border-info rounded-pill col-sm-12 " type="search" placeholder=""
+            <input class="form-control border-info rounded-pill col-sm-12" type="search" placeholder=""
               aria-label="Search">
           </form>
         </div>
@@ -119,12 +119,17 @@
           <div class="row mx-0 my-3 rounded-penochao">
             <div class="col-10 my-2 py-3 bg-white rounded-left-penochao">
               <h5>Hora da resenha</h5>
-              <p class="">Escreva a descrição da sua imagem</p>
+              <form>
+                <div class="form-group row">
+                  <div class="col-sm-12">
+                    <input type="email" class="form-control form-control-lg input-penochao-border" id="" placeholder="Descreva sua imagem">
+                  </div>
+                </div>
+              </form>
             </div>
-            <div
-              class="col-2 my-2 bg-btn-camera rounded-right-penochao d-flex justify-content-center align-items-center">
+            <div class="col-2 my-2 bg-btn-camera rounded-right-penochao d-flex justify-content-center align-items-center">
               <div>
-                <img src="../img/cam.PNG">
+                  <img src="../img/cam.PNG">
               </div>
             </div>
           </div>
@@ -204,10 +209,10 @@
 
             </div>
           </div>
-        </div>
-
+      </div>
+      <!-- Fim da coluna do feed -->
         
-      <!-- Início da coluna 3 -->
+      <!-- Início da coluna 3 - Resultados -->
       <div class="col-sm-3 border-penochao border-penochao-mobile rounded-top-penochao rounded-bottom-penochao justify-content-center">
         <div class="row mt-2 justify-content-center">
           <h5 class="text-center">Resultado de</h5>
@@ -352,7 +357,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
       </div>
-      <!-- Fim da coluna 3 -->
+      <!-- Fim da coluna 3 - Resultados -->
     </div>
   </main>
 
@@ -473,7 +478,7 @@
   
 
 </footer>
-<!-- Footer -->
+<!-- Fim do Footer -->
 
 
 
