--- a/views/home.html
+++ b/views/home.html
@@ -36,21 +36,23 @@
               aria-label="Search">
           </form>
         </div>
-        <div class="col px-0 d-flex justify-content-center">
-          <a class="navbar-brand mx-0 py-0" href="#">
-            <img src="../img/bola_75x75.png" alt="">
-          </a>
-        </div>
-        <div class="col px-0 d-flex justify-content-center">
-          <a class="navbar-brand mx-0 py-0" href="#">
-            <img src="../img/flag_75x75.PNG" alt="">
-          </a>
-        </div>
-        <div class="col px-0 d-flex justify-content-center">
-          <a class="navbar-brand mx-0 py-0" href="#">
-            <img src="../img/apito_75x75.PNG" alt="">
-          </a>
-        </div>
+          <div class="col d-flex justify-content-center icon-penochao-mobile-fixed" >
+            <div class="col px-0 d-flex justify-content-center">
+              <a class="navbar-brand mx-0 py-0" href="#">
+                <img src="../img/bola_75x75.png" alt="">
+              </a>
+            </div>
+            <div class="col px-0 d-flex justify-content-center">
+              <a class="navbar-brand mx-0 py-0" href="#">
+                <img src="../img/flag_75x75.PNG" alt="">
+              </a>
+            </div>
+            <div class="col px-0 d-flex justify-content-center">
+              <a class="navbar-brand mx-0 py-0" href="#">
+                <img src="../img/apito_75x75.PNG" alt="">
+              </a>
+            </div>
+          </div>
       </div>
     </nav>
   </header>
