alteração texto footer

--- a/v01/views/home.html
+++ b/v01/views/home.html
@@ -389,11 +389,10 @@
         <!-- Content -->
         <h5 class="font-weight-bold text-uppercase mb-4">Footer Content</h5>
         <p>PeNoChão</p>
-        <p>Um site onde suas conquistas são notadas,
-          o jogo no campão que invade o mundo, divulgado ,
-          postando e comentando, nossa plataforma foi criada para unir
-          pessoas distantes mais com mesmo objetivo, divulgar o que ninguém, consegue ver,
-          seguir os jogadores anônimos, que jogam em nível profissional   </p>
+        <p> PéNoChão é uma rede social onde suas conquistas são notadas! <br>
+          Divulgue, poste, conecte e comente o jogo do campão! <br>
+          Esta plataforma foi criada para unir jogadores com o mesmo objetivo:
+           a valorização do futebol de vázea. Venha se juntar à essa comunidade. </p>
 
       </div>
       <!-- Grid column -->
