--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/stylesheets/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-     <!-- Google Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    
+  <!-- Configurações da Head Padrões -->
+    <%- include('partials/head') %> 
+
     <title>Cadastro - Pé no Chão</title>
+
 </head>
+
 <body>
-    <header>
-        <nav class="navbar navbar-dark nav-desktop-penochao">
-          <div class="container logo-cadastro">
-            <div class="col-12">
-              <a class="navbar-brand mx-0 py-0" href="#">
-                <img src="/images/logo_75x75.png" alt="Pé no Chão, a rede social da várzea!">
-              </a>
-            </div>
-          </div>
-        </nav>
-      </header>
+  
+  <!-- Header com logo Centralizado-->
+  <%- include('partials/headerNaoLogada') %>
+
       <main>
         <div class="container justify-content-center area-cadastro">
           <div class="row d-flex justify-content-center">
@@ -118,4 +110,8 @@
         </div>
       </main>
 </body>
+
+<!-- Footer -->
+<%- include('partials/footer') %> 
+
 </html>
