--- a/v02/peNoChao/views/login.ejs
+++ b/v02/peNoChao/views/login.ejs
@@ -2,35 +2,19 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../stylesheets/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-     <!-- Google Fonts -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Incluindo a Head Padrão -->  
+    <%- include('partials/head') %> 
     
     <title>Login - Pé no Chão</title>
 </head>
 
-<body style="font-family:'Roboto', sans-serif;">
+<body>
 
-        <header>
-            <header>
-                <nav class="navbar navbar-dark nav-desktop-penochao">
-                  <div class="container logo-cadastro">
-                    <div class="col-12">
-                      <a class="navbar-brand mx-0 py-0" href="#">
-                        <img src="../images/logo_75x75.png" alt="Pé no Chão, a rede social da várzea!">
-                      </a>
-                    </div>
-                  </div>
-                </nav>
-              </header>
-        </header>
+<!-- Include Header Não Logada-->
+<%- include('partials/headerNaoLogada') %> 
    
         <main>
-            <div class="container col-9 col-sm-8 col-md-5 col-lg-4 justify-content-center ">
+            <div class="container col-11 col-sm-8 col-md-5 col-lg-4 justify-content-center ">
               <div class=" d-flex my-2 justify-content-center ">
                 <div class="form-cadastro my-4 ">
                    <h1>Login</h1>
@@ -49,7 +33,7 @@
                          <button class="btn btn-primary w-50" type="submit"> Entrar</button>
                         </div>
                         <div>
-                          <a class="btn btn-outline-primary w-50 btn-sm  my-1 " href=""> Cadastre-se </a>
+                          <a class="btn btn-outline-primary w-50 btn-sm  my-1 " href="cadastro"> Cadastre-se </a>
                         </div>
                         <div class="my-3">
                             <a href=""> Esqueceu a conta? </a>
@@ -64,14 +48,8 @@
 
    
 
+<%- include('partials/footer') %> 
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
