Cadastro de usuário finalizado, conectado com banco de dados

--- a/v02/peNoChao/views/cadastro.ejs
+++ b/v02/peNoChao/views/cadastro.ejs
@@ -89,6 +89,9 @@
                     <option value="TO">Tocantins</option>
                   </select>
 
+                  <label for="cep">Cep</label>
+                  <input type="text" id="cep" name="cep" >
+
                   <label for="cidade">Cidade</label>
                   <input type="text" id="cidade" name="cidade" >
 
