--- a/v02/peNoChao/views/partials/headerNaoLogada.ejs
+++ b/v02/peNoChao/views/partials/headerNaoLogada.ejs
@@ -1,7 +1,7 @@
 <header>
     <nav class="navbar navbar-dark nav-desktop-penochao">
-      <div class="container logo-cadastro">
-        <div class="col-12">
+      <div class="container">
+        <div class="col-12 logo-cadastro">
           <a class="navbar-brand mx-0 py-0" href="#">
             <img src="/images/logofinal.png" alt="Pé no Chão, a rede social da várzea!" id="imgLogo">
           </a>
